# ConsoleLib

./: .gitignore  .project  CMakeLists.txt  LICENSE  README.md  makefile
src/consoleLib/: ArgumentParser.cpp  ColorUtils.cpp  ConsoleLib.cpp  ConsoleUtils.cpp  DefaultConsole.cpp  Library.cpp  RealNumber.cpp  ScriptMap.cpp  UnixConsole.cpp  WindowsConsole.cpp
src/consoleUtils/: ConsoleCallbackMenu.cpp  ConsoleMenu.cpp  ConsoleUtils.cpp
src/consolelib/: console_lib.h
src/consoles/: DefaultConsole.cpp  UnixConsole.cpp  WindowsConsole.cpp  default_console.cpp  unix_console.cpp  windows_console.cpp
src/data/: DataUtils.cpp
src/dataUtils/: DataUtils.cpp  TimeUtils.cpp
src/inc/: BinomialDistribution.h  Client.h  ColorUtils.h  Colors.h  ConsoleCallbackMenu.h  ConsoleLib.h  ConsoleMenu.h  ConsoleUtility.h  ConsoleUtils.h  DataUtils.h  DefaultConsole.h  Distribution.h  IConsole.hpp  Library.h  PoissonsDistribution.h  RealNumber.h  ScriptMap.h  Server.h  Statistic.tpp  StatisticsGeneric.h  StatisticsGeneric.tpp  TimeUtils.h  UnixClient.h  UnixConsole.h  WindowsClient.h  WindowsConsole.h
src/networkUtils/: Client.cpp  Server.cpp  UnixClient.cpp  WindowsClient.cpp
src/tools/: argument_parser.cpp  color_tools.cpp  console_lib.cpp  console_menu.cpp  console_tools.cpp  data_tools.cpp  file_tools.cpp  script_map.cpp  time_tools.cpp
test/: DataUtilsTest.cpp  DelegateTest.cpp  RealNumberTest.cpp  StatisticTest.cpp  StatisticsGenericTest.cpp  TimeUtilsTest.cpp  data_tools_test.cpp  delegate_test.cpp  real_number_test.cpp  statistic_test.cpp  time_tools_test.cpp
(+26 files in other folders)
